fixed alignment

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
     padding: 0;
-    margin: 0;
+    margin: auto;
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
     background: #777;
     color: #777;
@@ -8,29 +8,38 @@ body {
     font-size: 18px;
 }
 
-
 #main {
-    margin-top: 10px;
-    margin-right: 50px;
-    margin-bottom: 10px;
-    margin-left: 50px;   
+    margin: 10px 50px 10px 50px;
     /*border: 1px dashed red; */ 
 }
 
+.section-main {
+    width: 55%;
+    height: 450px;
+    float: left;
+    line-height: 5rem;
+  }
+  
+  .aside-main {
+    width: 43%;
+    height: 450px;
+    float: right;
+    line-height: 5rem;
+}
 
 header,nav,section,aside,footer{
     background: #ebebeb;
     text-align: center;    
-
 }
 
 header, nav, footer {
     padding: 25px;
-    margin-top: 10px;
-    margin-right: 50px;
-    margin-bottom: 20px;
-    margin-left: 50px;   
+    margin: 10px 50px 20px 50px;
     text-align: center;
+}
+
+footer {
+    margin-top: 20px;
 }
 
 .article-main{
@@ -49,24 +58,6 @@ header, nav, footer {
     color: #777;   
  
 }
-
-.section-main {
-    width: 55%;
-    height: 450px;
-    float: left;
-    line-height: 5rem;
-  }
-  
-  .aside-main {
-    width: 40%;
-    height: 450px;
-    float: right;
-    line-height: 5rem;
-}
-
-
-
-
 
 h1 {
     color: #777;
